[package]
name = "kopper"
version = "0.1.0"
authors = ["Fernando Lugo <lugo.fernando@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
path = "src/kopper.rs"

[profile.dev]
panic = "abort"
opt-level = "z"

[profile.release]
panic = "abort"
opt-level = "z"
lto = true
debug = true

[features]
default = []
qemu = []
raspberrypi = []
board_qemu-aarch64 = ["qemu"]
board_pico = ["raspberrypi"]
