[package]
name = "kopper"
version = "0.1.0"
authors = ["Fernando Lugo <lugo.fernando@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kopper-macros = { path = "macros" }
num-traits = { version="0.2.14", default-features = false}
tock-registers = "0.7.0"

[lib]
path = "src/kopper.rs"

[profile.dev]
panic = "abort"
opt-level = "z"

[profile.release]
panic = "abort"
opt-level = "z"
lto = true
debug = true

[features]
default = []
qemu = []
raspberrypi = []
pl011 = []
board_qemu-aarch64 = ["qemu", "pl011"]
board_pico = ["raspberrypi", "pl011"]
